--- a/style.css
+++ b/style.css
@@ -4,3 +4,10 @@
     position: absolute;
     bottom: 0;
 }
+
+.cactus{
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    bottom: 0;
+}
