--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .dino{
     width:60px;
     height: 60px;
+    background-image: url(dino.png);
     position: absolute;
     bottom: 0;
 }
@@ -9,5 +10,34 @@
     position: absolute;
     width: 60px;
     height: 60px;
+    background-image: url(cactus.png);
     bottom: 0;
+}
+
+.game-over{
+    position: absolute;
+    background-image: url(example.png);
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    left: 10%;
+}
+
+@keyframes slideright {
+    from{
+        background-position: 70000%;
+    }
+    to{
+        background-position: 0;
+    }
+}
+
+.background{
+    position: absolute;
+    bottom: 0;
+    background-image: url(background.png);
+    background-repeat: repeat-x;
+    animation: slideright 3000s infinite linear;
+    width: 100%;
+    height: 100%;
 }
